<resources>
    <string name="app_name">AAD</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="new_patient">New Patient</string>
    <string name="existing_patient">Existing Patient</string>
    <string name="create_title">Enter new patient details</string>
    <string name="patient_dn">First Name</string>
    <string name="firstname">First Name</string>
    <string name="secondName">Second Name</string>
    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="dob">Date Of Birth</string>
    <string name="nhsNo">NHS Number</string>
    <string name="subNewPatient">Submit</string>
    <string name="submit">Submit</string>
    <string name="dotCan">Dot Cancelation</string>
    <string name="sqd">Square Matrices Direction</string>
    <string name="sqm">Square Matrices Compass</string>
    <string name="rsr">Road Sign Recognition</string>
    <string name="tmt">Trail Making Test</string>
    <string name="testSelect">Select a Test</string>
    <string name="confirm">Confirm</string>
    <string name="lastname">Last Name</string>
    <string name="date_created">Date Created</string>
    <string name="newSession">New Session</string>
    <string name="contSession">Continue Session</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="reviewPatient">Review Patient Tests</string>
    <string name="sel_pat">Select Patient</string>
    <string name="sel_ses">Select Session</string>
    <string name="tgl_motionEvent">Toggle Motion Event</string>
    <string name="rec_mtn_evnt">Record Motion Event On</string>
    <string name="no_rec_mtn_evnt">Record Motion Event Off</string>
</resources>
