<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.coursework.selection.existing.ExistingPatientView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="567dp"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="640dp"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1280dp"
            tools:layout_editor_absoluteY="13dp">

            <TableLayout
                android:id="@+id/tl_existing_patient"
                android:layout_width="450dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:id="@+id/tr_existing_header"
                    android:layout_width="match_parent"
                    android:layout_height="49dp">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/firstname"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lastname"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dob"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </TableRow>

            </TableLayout>

        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:id="@+id/tl_patient_sessions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                </TableRow>
            </TableLayout>

        </ScrollView>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="1234dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_cont_session"
            android:layout_width="197dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="244dp"
            android:layout_marginTop="8dp"
            android:onClick="onContinueSession"
            android:text="@string/contSession"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.526" />

        <Button
            android:id="@+id/btn_newSession"
            android:layout_width="199dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="16dp"
            android:onClick="onNewSession"
            android:text="@string/newSession"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
